# origyn_nft

./: .gitignore  README.md  canister_ids.json  dfx.json  mops.toml  otherids.json  package.json  patch.diff
docs/: index.md
docs/external_canisters/: ICRC2.md
docs/origyn_nft_reference/: DIP721.md  ICRC7.md  data.md  dfxtypes.md  governance.md  http.md  kyc.md  ledger_interface.md  market.md  metadata.md  mint.md  owner.md  storage_http.md  storage_store.md  types.md  utils.md
docs/origyn_sale_reference/: types.md
docs/tests/: test_utils.html  test_utils.md
runners/: test_runner_auction.sh  test_runner_data.sh  test_runner_instant.sh  test_runner_nft.sh  test_runner_nft_2.sh  test_runner_sale.sh  test_runner_utils.sh
src/external_canisters/: ICRC2.mo
src/integration_tests/: Cargo.toml
src/integration_tests/external_canisters/icrc_ledger/api/src/lifecycle/: init.rs
src/integration_tests/external_canisters/icrc_ledger/api/src/queries/: get_transactions.rs  icrc1_total_supply.rs  icrc2_allowance.rs  mod.rs
src/integration_tests/external_canisters/icrc_ledger/api/src/updates/: icrc2_approve.rs
src/integration_tests/external_canisters/icrc_ledger/c2c_client/src/: lib.rs
src/integration_tests/external_canisters/origyn_nft_reference/api/: Cargo.toml
src/integration_tests/external_canisters/origyn_nft_reference/api/src/: lib.rs  origyn_nft_reference_canister.rs
src/integration_tests/external_canisters/test_notify/api/: Cargo.toml
src/integration_tests/external_canisters/test_notify/api/src/: lib.rs  test_canister_notify.rs
src/integration_tests/impl/: Cargo.toml
src/integration_tests/impl/src/: lib.rs  utils.rs  wasms.rs
src/integration_tests/impl/src/client/: icrc1_icrc2_token.rs  macros.rs  mod.rs  origyn_nft_reference.rs  pocket.rs
src/integration_tests/impl/src/ogy_swap_suite/: init.rs  mod.rs
src/integration_tests/impl/src/ogy_swap_suite/tests/: mod.rs  ogy_legacy_ledger.rs  ogy_new_ledger.rs  ogy_token_swap.rs
src/integration_tests/impl/src/origyn_nft_suite/: init.rs  mod.rs  nft_utils.rs  utils.rs
src/integration_tests/impl/src/origyn_nft_suite/tests/: mod.rs  nft_tests_icrc7.rs  tests_origyn.rs  utils.rs
src/integration_tests/libraries/canister_client/src/: lib.rs
src/integration_tests/libraries/canister_state_macros/src/: lib.rs
src/integration_tests/libraries/canister_time/: Cargo.toml
src/integration_tests/libraries/canister_time/src/: lib.rs
src/integration_tests/libraries/canister_tracing_macros/src/: lib.rs
src/integration_tests/libraries/http_request/src/: lib.rs  router.rs
src/integration_tests/libraries/ledger_utils/: Cargo.toml
src/integration_tests/libraries/ledger_utils/src/: lib.rs
src/integration_tests/libraries/stable_memory/src/: lib.rs
src/integration_tests/libraries/types/: Cargo.toml
src/integration_tests/libraries/types/src/: lib.rs  neuron_info.rs  proposals.rs  rewards_recipients.rs  token.rs
src/integration_tests/libraries/utils/: Cargo.toml
src/integration_tests/libraries/utils/src/: consts.rs  env.rs  lib.rs  memory.rs  rand.rs
src/origyn_nft_reference/: ICRC7.mo  data.mo  governance.mo  http.mo  kyc.mo  ledger_interface.mo  main.mo  market.mo  metadata.mo  mint.mo  owner.mo  storage_http.mo  storage_store.mo  types.mo  types.mo.orig  utils.mo
src/origyn_sale_reference/: main.mo
src/origyn_storage_reference/: storage_canister.mo
src/tests/: test_notify.mo  test_runner.mo  test_runner_collection.mo  test_runner_data.mo  test_runner_instant_transfer.mo  test_runner_nft.mo  test_runner_nft.mo.orig  test_runner_nft_2.mo  test_runner_sale.mo  (+2 more)
(+59 files in other folders)
