[workspace]
members = [
  "impl",
  "libraries/candid_gen",
  "libraries/canister_client",
  "libraries/canister_client_macros",
  "libraries/canister_logger",
  "libraries/canister_state_macros",
  "libraries/canister_time",
  "libraries/canister_tracing_macros",
  "libraries/http_request",
  "libraries/serializer",
  "libraries/stable_memory",
  "libraries/types",
  "libraries/utils",
  "external_canisters/icrc_ledger/api",
  "external_canisters/icrc_ledger/c2c_client",
]
resolver = "2"

[profile.release]
lto = "thin"
panic = "abort"

[workspace.dependencies]
candid = { version = "0.10.8", features = ["value"]  }
ciborium = "0.2.2"
futures = "0.3.29"
# Enable `custom` feature of k256's getrandom dependency. See icp_neuron/impl/src/ecdsa.rs for more details.
getrandom = { version = "0.2.12", features = ["custom"] }
hex = "0.4.3"
ic-cdk = "0.15.0"
ic-cdk-macros = "0.15.0"
ic-cdk-timers = "0.9.0"
ic-ledger-types = "0.12.0"
ic-stable-structures = "0.6.4"
ic-transport-types = "0.37.0"
ic0 = "0.23.0"
icrc-ledger-types = "0.1.5"
k256 = "0.13.1"
proc-macro2 = "1.0.78"
quote = "1.0.33"
rmp-serde = "1.1.2"
serde = "1.0.196"
serde_bytes = "0.11.12"
serde_cbor = "0.11.2"
serde_json = "1.0.108"
serde_with = "3.7.0"
serde_yaml = "0.9.29"
sha2 = "0.10.8"
syn = "2.0.39"
tracing = "0.1.40"
tracing-attributes = "0.1.27"
tracing-subscriber = "0.3.18"
num-bigint = "0.4.4"
time = "0.3"
pocket-ic = "3.1.0"
