[package]
name = "integration_testing"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = {workspace = true}
pocket-ic = {workspace = true}
candid = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
types = { path = "../libraries/types" }
utils = { path = '../libraries/utils' }
serde_yaml = { workspace = true }
icrc_ledger_canister = { path = "../external_canisters/icrc_ledger/api" }
origyn_nft_reference = { path = "../external_canisters/origyn_nft_reference/api" }
canister_logger = { path = '../libraries/canister_logger' }
canister_state_macros = { path = '../libraries/canister_state_macros' }
canister_time = { path = '../libraries/canister_time' }
canister_tracing_macros = { path = '../libraries/canister_tracing_macros' }
http_request = { path = '../libraries/http_request' }
ledger_utils = { path = "../libraries/ledger_utils" }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
icrc-ledger-types = { workspace = true }
ic-ledger-types = { workspace = true }
serializer = { path = '../libraries/serializer' }
stable_memory = { path = '../libraries/stable_memory' }
tracing = { workspace = true }
futures = { workspace = true }
num-bigint = {workspace = true}
rand = "0.8.5"
lazy_static = "1.4.0"
hex = "0.4"
serde_bytes = { workspace = true }
serde_cbor = { workspace = true }
sha2 = "0.10.8"
