[package]
name = "origyn_nft_reference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.14.0"
candid = { workspace = true }
candid_gen = { path = "../../../libraries/candid_gen" }
icrc-ledger-types = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
